--- a/view/myPage/mainMyPage.html
+++ b/view/myPage/mainMyPage.html
@@ -66,11 +66,15 @@
 #my .nav-item{
     padding: 0 20px 0 0;
 }
-#my .nav-link:hover,
-#my .nav-link.active+.nav-line,
+
+#my .nav-link.active+.nav_line,
 #my .nav-link.active{
     border: none;
     border-bottom: solid #f4744c;
+    margin-right: -20px;
+}
+#my .nav-link:hover{
+    border: none;
 }
 #my .nav-item a{
     font-size: 1.4em;
