--- a/view/community/story.html
+++ b/view/community/story.html
@@ -20,8 +20,8 @@
     .btn_pop{   /* 제목 버튼 */
         display: flex;
         position: relative;
-        width: 100%;
-        height: 100%;
+        width: 100%; height: 100%;
+        margin-bottom: 1PX;
         border: solid 0.5px #757575;
         border-radius: 4px;
         color: #424242;
@@ -44,7 +44,7 @@
         border-radius: 4px;
         box-shadow: 0 -1px 16px rgb(0 0 0 / 20%);
         background-color: white;
-        top: 0;
+        top: 10px;
         height: 0;
         z-index: 9;
         opacity: 0;
