--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -135,9 +135,11 @@
     }
       
     #searchTable{
-      font-size: 17px;
+      font-size: 16px;
       border-collapse: separate;
       border-spacing: 0 10px;
+      margin-left: 5px;
+      margin-right: 3px;
     }
 
     </style>
