--- a/view/commons/header.html
+++ b/view/commons/header.html
@@ -185,7 +185,7 @@
                     <input id="headerSearch" type="search" placeholder="기본값">
                     
                     <!-- 돋보기 -->
-                    <i class="fa fa-search" id="fafafa" style="cursor: pointer; font-size: 27px;margin: 9px;border-radius: -26px;border-bottom-width: 2px;border-bottom-style: none;margin-left: 8px;"></i>
+                    <i class="fa fa-search" id="search-icon" style="cursor: pointer; font-size: 27px;margin: 9px;border-radius: -26px;border-bottom-width: 2px;border-bottom-style: none;margin-left: 8px;"></i>
                     
                     <!-- 장바구니 -->
                     <svg id="goCart" xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none"
